[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "unidock_tools"
dynamic = [ "version" ]
keywords = [ "Docking" ]
authors = [
    { name = "Yannan Yuan", email = "yuanyn@dp.tech" },
    { name = "Hang Zheng", email = "zhengh@dp.tech" }
]
description = "Several docking-related applications based on Uni-Dock."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: Apache Software License",
]
#dependencies = [
#    "rdkit",
#    "networkx",
#]
[tool.setuptools_scm]
write_to = "unidock_tools/_version.py"

[project.urls]
Homepage = "https://github.com/dptech-corp/Uni-Dock"
Repository = "https://github.com/dptech-corp/Uni-Dock.git"

[tool.setuptools.package-data]
ad4data = ["*.dat"]

[project.scripts]
unidocktools = "unidock_tools.main:main_cli"

#[project.entry-points."unidocktools"]
#unidocktools = "unidock_tools.main:main_cli"